--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "next-view-transitions": "^0.3.4",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
